# dnd-sheet-tauri

./: .gitignore  README.md  create-character.html  package.json  svelte.config.js  vite.config.js
.github/workflows/: publish.yml
src/: App.svelte  CreateCharacter.svelte  app.html  create-character.js  error.html  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/dev_data/sheets/: Test
src-tauri/dnd_protos/: Cargo.toml  build.rs
src-tauri/dnd_protos/src/: lib.rs  proto_helpers.rs
src-tauri/dnd_protos/src/protos/: character_sheet.proto  cleric_subclasses.proto  dnd_classes.proto  dnd_data.proto  homebrew.proto  user_data.proto
src-tauri/permissions/: default.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/calculators/: abilities.rs  classes.rs  health.rs  utils.rs
src-tauri/src/commands/: getters.rs
src-tauri/src/helpers/: classdata.rs  sheet_builder.rs  utils.rs
src-tauri/src/loaders/: disk.rs  global.rs  homebrew.rs  static.rs
src-tauri/src/tests/: test_calculators.rs  test_proto_helpers.rs
src-tauri/src/tests/calculators/: test_abilities.rs  test_health.rs  test_utils.rs
src-tauri/src/tests/loaders/: test_homebrew.rs
src-tauri/src/tests/resources/homebrew/: palg
src/lang/: en.json  fr.json
src/lib/: Card.svelte  Radio.svelte  i18n.js
src/routes/: +layout.js  +page.svelte
src/routes/create-character/: +page.svelte
src/routes/edit/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/welcome/: +page.svelte
static/: styles.css
