workspace = { members = ["dnd_protos"] }

[package]
name = "dnd-sheet-tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
build = "build/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.10", features = [] }
tonic-build = "0.11"
# Used for building data
prost = "0.12"
[build-dependencies.dnd_protos]
path = "dnd_protos/"


[dependencies]
tauri = { version = "2.0.0-beta.10", features = ["unstable"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"
rust-embed= { version = "8.3.0", features = ["compression"] }
evalexpr = "11.3"
tauri-plugin-dialog = "2.0.0-beta.3"
once_cell = "1.19.0"

[dependencies.dnd_protos]
path = "dnd_protos/"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
