workspace = { members = ["dnd_protos"] }

[lib]
name = "dnd_sheet_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[package]
name = "dnd_sheet_tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["Kinsteen"]
edition = "2021"
build = "build/build.rs"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }
tonic-build = "0.11"
# Used for building data
prost = "0.12"
dnd_protos = { path = "dnd_protos/" }

[dependencies]
dnd_protos = { path = "dnd_protos/" }
tauri = { version = "2.0.0-beta", features = ["unstable", "devtools"] }
tauri-plugin-fs = "2.0.0-beta.4" # TODO remove when fixed
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"
# We always bundle in the binary, even in debug, because in any case we can't
# modify the generated proto files.
# It also helps when running on Android in debug mode.
rust-embed = { version = "8.3.0", features = ["compression", "debug-embed", "include-exclude"] }
evalexpr = "11.3"
tauri-plugin-dialog = ">=2.0.0-beta.0"
once_cell = "1.19.0"

# Only on Tauri stable
# [features]
# # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
# custom-protocol = ["tauri/custom-protocol"]
