[package]
name = "dnd_protos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.11"
